Fix login page shapes on mobile

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -132,6 +132,7 @@
       width: var(--rect-width);
 
       & img {
+        width: 100%;
         animation: wave 20s 0.1s infinite linear; /* stylelint-disable-line */
       }
     }
@@ -143,6 +144,7 @@
       width: var(--rect-width);
 
       & img {
+        width: 100%;
         animation: wave 16s 0.1s infinite linear; /* stylelint-disable-line */
       }
     }
@@ -156,6 +158,7 @@
       width: var(--rect-width);
 
       & img {
+        width: 100%;
         animation: wave 12s 0.1s infinite linear; /* stylelint-disable-line */
       }
     }
@@ -168,6 +171,7 @@
       width: 150px;
 
       & img {
+        width: 100%;
         animation: wander 16s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955); /* stylelint-disable-line */
       }
     }
@@ -179,6 +183,7 @@
       width: 250px;
 
       & img {
+        width: 100%;
         animation: somersault 20s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955); /* stylelint-disable-line */
       }
     }
@@ -341,16 +346,6 @@
     }
   }
 
-  .table {
-    display: block;
-    position: relative;
-
-    & .tableCell {
-      display: block;
-      vertical-align: initial;
-    }
-  }
-
   .login {
     height: calc(50vh - var(--s-top-bar-height)); /* stylelint-disable-line */
     width: 100%;
@@ -359,6 +354,7 @@
       position: relative;
       left: -5px;
       font-size: 14px;
+      margin-top: 20px;
     }
 
     &.focused {
@@ -389,6 +385,16 @@
         top: 50px;
       }
     }
+
+    & .table {
+      display: block;
+      position: relative;
+
+      & .tableCell {
+        display: block;
+        vertical-align: initial;
+      }
+    }
   }
 
   .signUp {
@@ -409,34 +415,37 @@
       position: absolute !important;
 
       &.rectA {
-        right: 10% !important;
-        top: 10% !important;
-        width: calc(0.5 * var(--rect-width));
+        right: 0% !important;
+        top: 5% !important;
+        left: auto !important;
+        width: 30%;
       }
 
       &.rectB {
-        right: 8% !important;
-        top: 15% !important;
+        right: -4% !important;
+        top: 10% !important;
         left: auto !important;
-        width: calc(0.5 * var(--rect-width));
+        width: 30%;
       }
 
       &.rectC {
-        display: none;
-        width: 0;
+        & img {
+          display: none;
+          width: 0;
+        }
       }
 
       &.circle {
         right: auto !important;
-        left: 10% !important;
+        left: 0% !important;
         bottom: 7% !important;
-        width: calc(0.75 * var(--rect-width));
+        width: 45%;
       }
 
       &.triangle {
-        right: -5% !important;
-        top: 3% !important;
-        width: calc(0.75 * var(--rect-width));
+        right: -5px !important;
+        top: 5px !important;
+        width: 40%;
       }
     }
   }
